--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "@heroui/use-theme": "2.1.10",
     "@react-aria/visually-hidden": "3.8.26",
     "@react-types/shared": "3.31.0",
+    "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/postcss": "4.1.11",
     "@tailwindcss/vite": "4.1.11",
     "clsx": "2.1.1",
     "framer-motion": "11.18.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "6.23.0",
     "tailwind-variants": "2.0.1",
     "tailwindcss": "4.1.11"
