--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@heroui/kbd": "^2.2.19",
     "@heroui/link": "^2.2.21",
     "@heroui/navbar": "^2.2.22",
+    "@heroui/react": "^2.8.2",
     "@heroui/snippet": "^2.2.25",
     "@heroui/switch": "^2.2.22",
     "@heroui/system": "^2.4.20",
@@ -31,10 +32,10 @@
     "framer-motion": "11.18.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "6.23.0",
-    "tailwind-variants": "2.0.1",
-    "tailwindcss": "4.1.11"
+    "react-router-dom": "^6.23.0",
+    "tailwind-variants": "2.0.1"
   },
   "devDependencies": {
     "@eslint/compat": "1.2.8",
@@ -46,6 +47,7 @@
     "@typescript-eslint/eslint-plugin": "8.31.1",
     "@typescript-eslint/parser": "8.31.1",
     "@vitejs/plugin-react": "4.7.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "9.25.1",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "2.31.0",
@@ -56,8 +58,9 @@
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-unused-imports": "4.1.4",
     "globals": "16.0.0",
-    "postcss": "8.5.6",
+    "postcss": "^8.5.6",
     "prettier": "3.5.3",
+    "tailwindcss": "^4.1.11",
     "typescript": "5.6.3",
     "vite": "6.0.11",
     "vite-tsconfig-paths": "5.1.4"
